[gd_scene load_steps=13 format=3 uid="uid://s5fdm7d3s0u6"]

[ext_resource type="Script" path="res://playable/crow.gd" id="1_i8kv6"]
[ext_resource type="Texture2D" uid="uid://b6yb3isvuvfiy" path="res://sprites/crow.png" id="1_m1gk0"]
[ext_resource type="AudioStream" uid="uid://dpr0y8f4t0ev5" path="res://assets/audio/sfx/bird_collision.mp3" id="2_iwp80"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r3vs6"]
size = Vector2(99, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_830cg"]
atlas = ExtResource("1_m1gk0")
region = Rect2(0, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y13k"]
atlas = ExtResource("1_m1gk0")
region = Rect2(68, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsdhu"]
atlas = ExtResource("1_m1gk0")
region = Rect2(136, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4aee"]
atlas = ExtResource("1_m1gk0")
region = Rect2(204, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydn4n"]
atlas = ExtResource("1_m1gk0")
region = Rect2(272, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh36l"]
atlas = ExtResource("1_m1gk0")
region = Rect2(340, 0, 68, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ycr"]
atlas = ExtResource("1_m1gk0")
region = Rect2(408, 0, 68, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_w8tib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_830cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y13k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsdhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4aee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydn4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh36l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ycr")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="Crow" type="Area2D"]
script = ExtResource("1_i8kv6")

[node name="CrowStrikeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_iwp80")
volume_db = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, -12.5)
shape = SubResource("RectangleShape2D_r3vs6")

[node name="AnimatedCrow" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.125, 2.125)
scale = Vector2(2.87868, 2.41544)
sprite_frames = SubResource("SpriteFrames_w8tib")
frame_progress = 0.701364

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
